changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Use safe string functions.
 server/build_map.c
Nicolas Weeger 2008-03-29

Use flags instead of hardcoded values for monster's will_apply.
 include/object.h
 server/monster.c move.c
Nicolas Weeger 2008-03-29

Remove unused return value.
 include/sproto.h
 server/player.c
 socket/request.c
Nicolas Weeger 2008-03-29

Remove unused return value.
 include/sproto.h
 server/player.c
Nicolas Weeger 2008-03-29

Remove static buffer.
 server/hiscore.c
Nicolas Weeger, 2008-03-29

Remove static buffer, simplify code.
 server/hiscore.c
Nicolas Weeger, 2008-03-29

Make god-related object const to avoid modification.
 common/holy.c readable.c
 include/libproto.h sproto.h
 server/attack.c c_wiz.c gods.c pets.c spell_attack.c spell_effect.c
Nicolas Weeger, 2008-03-29

Clean code, use player-finding function.
 server/c_wiz.c
Nicolas Weeger, 2008-03-29

Remove global variables, make them in a structure. Make function static.
 random_maps/rproto.h treasure.c
Nicolas Weeger, 2008-03-29

Remove global variable, remove suspect tests.
 random_maps/treasure.c
Nicolas Weeger, 2008-03-29

Remove obsolete other_arch field which was used for spell in firewall.
 server/time.c
Nicolas Weeger, 2008-03-29

Remove free_map()'s second parameter, unused.
 common/map.c
 include/libproto.h
 server/swap.c
 test/unit/server/comet_perf.c
Nicolas Weeger, 2008-03-29

Use 'const char*' instead of 'char*'.
 server/c_party.c c_wiz.c
Nicolas Weeger, 2008-03-29

Fix non meaningful return value of summon_hostile_monsters().
 server/spell_util.c
Nicolas Weeger, 2008-03-29

Use 'const char*' instead of 'char*'.